--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8088
 spring.datasource.url=jdbc:mysql://localhost:3306/webphone
 spring.datasource.username=root
 spring.datasource.password=0909
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.prefix=classpath:/templates/
